// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should renders correctly with icon prop 1`] = `
<Icon
  className="test"
  color="brand-blue"
  icon={[Function]}
  inline={true}
  onClick={[MockFunction]}
>
  <CarSVG
    className="icon color__brand-blue test"
    onClick={[MockFunction]}
    viewBox="0 0 36 36"
  >
    <svg
      className="icon color__brand-blue test"
      onClick={[MockFunction]}
      viewBox="0 0 36 36"
    >
      <path
        clipRule="evenodd"
        d="M12 3a3 3 0 00-3 3v2H6.437a3 3 0 00-2.305 1.08L.695 13.202A3 3 0 000 15.124V16c0 1.312.842 2.427 2.016 2.835A3.5 3.5 0 008.965 19h6.07a3.501 3.501 0 006.95-.165A3.001 3.001 0 0024 16V6a3 3 0 00-3-3h-9zm9.572 13.82A.999.999 0 0022 16V6a1 1 0 00-1-1h-9a1 1 0 00-1 1v8a1 1 0 11-2 0v-4H6.437a1 1 0 00-.768.36l-3.437 4.124a1 1 0 00-.232.64V16c0 .34.17.64.428.82a3.5 3.5 0 016.235.18h6.674a3.5 3.5 0 016.235-.18zM7 18.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM18.5 20a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
        fillRule="evenodd"
      />
    </svg>
  </CarSVG>
</Icon>
`;

exports[`<Icon /> should renders correctly with image-cap 1`] = `
<Icon
  className="test"
  color="brand-blue"
  onClick={[MockFunction]}
  size={20}
>
  <SearchSVG
    className="icon icon-block color__brand-blue test"
    height={20}
    onClick={[MockFunction]}
    viewBox="0 0 36 36"
    width={20}
  >
    <svg
      className="icon icon-block color__brand-blue test"
      height={20}
      onClick={[MockFunction]}
      viewBox="0 0 36 36"
      width={20}
    >
      <path
        clipRule="evenodd"
        d="M10.5 18a7.5 7.5 0 115.963-2.95l4.244 4.243a1 1 0 01-1.414 1.414l-4.244-4.244A7.467 7.467 0 0110.5 18zm0-2a5.5 5.5 0 100-11 5.5 5.5 0 000 11z"
        fillRule="evenodd"
      />
    </svg>
  </SearchSVG>
</Icon>
`;
